--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link type="text/css" rel="stylesheet" href = "/style.css" defer>
   <title>BAE</title>
 </head>
 <body>
-  <h1>Music by BAE</h1>
-  <div id="app"></div>
+  <h1>BAE</h1>
+  <div class="react" id="app"></div>
   <script src='bundle.js'></script>
 </body>
 </html>
