--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <title>BAE</title>
 </head>
 <body>
-  <h1>BAE</h1>
+  <img src="colorBAE.jpeg" width="50%" height="50%">
   <div class="react" id="app"></div>
   <script src='bundle.js'></script>
 </body>
